--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,8 +22,9 @@ sonar.typescript.lcov.reportPaths=src/ui/web/coverage/lcov.info
 # ------------------------------------------------------
 # Coverage Exclusions (files excluded from coverage gating)
 # ------------------------------------------------------
-# Exclude UI and scripts from coverage requirements
-sonar.coverage.exclusions=src/ui/web/**,scripts/**
+# Exclude UI, scripts, and __init__.py files from coverage requirements
+# __init__.py files are typically small and can drag coverage % down
+sonar.coverage.exclusions=src/ui/web/**,scripts/**,**/__init__.py
 
 # ------------------------------------------------------
 # Exclusions (files that don't need coverage)
